# zeno

./: .gitignore  API_KEY_MANAGEMENT.md  DATABASE_SYSTEM.md  DEVELOPMENT.md  LICENSE  README.md  TROUBLESHOOTING.md  index.html  package.json  setup.sh  supabase-schema.sql  tailwind.config.js  vite.config.ts
backend/: index.js  package-lock.json  package.json
docs/: README.md  architecture.md  competitive-analysis.md  development-setup.md  marketing-strategy.md  product-roadmap.md  user-journey.md  user-personas.md  vision-mission.md
public/: manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: APIKeyConfig.tsx  ChatInterface.tsx  ChatWindow.tsx  ConflictResolver.tsx  ConversationalDemo.tsx  ConversationalOnboarding.tsx  DailyCoaching.tsx  Dashboard.tsx  DatabaseModeSelector.tsx  EnhancedTaskBoard.tsx  HabitTracker.tsx  HotkeyOverlay.tsx  IntelligentPlanningDemo.tsx  KanbanBoard.tsx  ModelSelector.tsx  Navigation.tsx  OnboardingFlow.tsx  Settings.tsx  TaskBoard.tsx  TaskCreationTest.tsx  TodayDashboard.tsx  ZenoTaskBoard.tsx
src/services/: apiClient.ts  supabaseClient.ts
src/services/ai/: advancedZenoCoachingService.ts  aiService.ts  contextualQuestionEngine.ts  conversationalInputService.ts  conversationalTypes.ts  intelligentDailyPlanner.ts  types.ts  zenoCoachingService.ts  zenoConversationalAI.ts
src/services/database/: DatabaseContext.tsx  cloudDatabaseService.ts  databaseService.ts  localDatabase.ts  localDatabaseService.ts  types.ts
