[package]
name = "zeno-ai"
version = "0.1.0"
description = "Cross-device personal assistant with AI chat and task management"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-close", "window-minimize", "window-unmaximize", "window-start-dragging", "window-unminimize", "global-shortcut-all", "window-show", "window-hide", "shell-open", "window-maximize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
